# AIM-OS

./: .cursorrules  .gitignore  ACTIVE_SPRINT_STATUS.md  AIMOS_SELF_IMPROVEMENT_SYSTEM_DESIGN.md  AI_AGENT_CONTEXT.md  AI_HANDOFF_CONTROL.md  ANNOUNCEMENTS_V1.0.0.md  API_KEY_MANAGEMENT_STRATEGY.md  AUTOMATED_CONTEXT_DUMPING_SYSTEM_COMPLETE.md  BRADEN_STATUS_UPDATE.md  BUILD_LEDGER.md  BUILD_STATUS_REPORT.md  CODEX_NEXT_STEPS.md  COMPLETION_TODO_COMPREHENSIVE.md  COMPREHENSIVE_COMPLETION_AND_NEXT_STEPS.md  COMPREHENSIVE_MCP_DEBUGGING_SYSTEM.md  COMPREHENSIVE_SAFETY_SYSTEMS_IMPLEMENTATION_COMPLETE.md  COMPREHENSIVE_SYSTEMS_AND_FUTURE_PLANS_ANALYSIS.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_STATUS.md  COST_OPTIMIZED_TIMELINE_SYSTEM_COMPLETE.md  CRITICAL_ERROR_ANALYSIS_DOCUMENTATION_OVERWRITE.md  CROSS_MODEL_CONSCIOUSNESS_FINAL_SUMMARY.md  CROSS_MODEL_CONSCIOUSNESS_TODO.md  CURSOR_IMPLEMENTATION_REALITY_CHECK.md  CURSOR_INTEGRATION_DEEP_DIVE.md  CURSOR_MCP_SETUP_COMPLETE.md  CURSOR_MCP_SETUP_GUIDE.md  CURSOR_MCP_SUPPORT_ISSUE_CONFIRMED.md  CURSOR_RULES_IMPLEMENTATION_COMPLETE.md  CURSOR_RULES_RESTRUCTURE_ANALYSIS.md  CURSOR_RULES_RESTRUCTURE_COMPLETE.md  CURSOR_RULES_TEST_REPORT.md  CURSOR_RULES_UTILIZATION_PLAN.md  DEEP_ANALYSIS_CROSS_MODEL_CONSCIOUSNESS.md  DOCUMENTATION_ORGANIZATION_MASTER_PLAN.md  ENHANCED_SAFETY_SYSTEMS_WITH_PROTOCOL_EDUCATION_COMPLETE.md  ENHANCED_TIMELINE_CONTEXT_SYSTEM_COMPLETE.md  FOR_BRADEN_MCP_SERVER_READY.md  FOR_BRADEN_WHEN_YOU_RETURN.md  (+84 more)
Documentation/: A Total System of Memory.docx  AEONWAVE.docx  API_INTELLIGENCE_HUB.md  AgentForge.docx  (+30 more)
(+1338 files in other folders)
